[tool.poetry]
name = "croco"
version = "0.1.0"
description = ""
authors = ["Sam De Meyer <sam.demeyer@robovision.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
scikit-learn = "^1.4.2"
tqdm = "^4.66.4"
quaternion = "^3.5.2.post4"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
