[tool.poetry]
name = "croco"
version = "0.1.0"
description = ""
authors = ["Sam De Meyer <sam.demeyer@robovision.eu>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
scikit-learn = "^1.4.2"
tqdm = "^4.66.4"
quaternion = "^3.5.2.post4"
opencv-python = "^4.9.0.80"
cmake = "^3.29.3"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
einops = "^0.8.0"
h5py = "^3.11.0"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
